<resources>
    <string name="app_name">IIMA App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_hdms">HDMS</string>
    <string name="nav_mess">Mess</string>
    <string name="nav_faculty">Faculty Profile</string>
    <string name="nav_forum">Forum</string>
    <string name="nav_batch">Batch Info</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Mess</item>
        <item>HDMS</item>
        <item>Faculty Profile</item>
        <item>Batch Profile</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_forum">Forum</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="forum">Forum</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="powered_by">Powered by:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
