<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_mess"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_mess" />
        <item
            android:id="@+id/nav_hdms"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_hdms" />
        <item
            android:id="@+id/nav_faculty"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_faculty" />
        <item
            android:id="@+id/nav_batch"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_batch" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_forum"
                android:title="@string/nav_forum" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>
